--- a/movie.css
+++ b/movie.css
@@ -5,7 +5,7 @@
 
 header {
     width: 100%;
-    height: 100px;
+    height: 70px;
     background-color: rgb(183, 183, 183);
     display: flex;
     flex-direction: row;
@@ -18,17 +18,26 @@ header>h1 {
     color: rgb(0, 0, 0);
 }
 
-#movie-cards {
+#searchBox {
+    background-color: transparent;
+    height: 30px;
+    /*border: none;*/
+}
+
+#movie-cards {  /*카드가 생기는 부분*/
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, auto);
     grid-template-rows: repeat(5, auto);
-  }
-  
-.movie_card{
-    width: 300px;
+    justify-content: center;
+    
+}
+
+.movie_card{ /*카드 하나하나*/
+    width: 200px;
     border: 1px solid #ccc;
     padding: 20px;
-    margin: 50px auto 50px auto;
+    margin: 50px auto 0px auto;
     text-align: center;
+    background-color: rgb(132, 132, 132);
 }
 
