--- a/movie.css
+++ b/movie.css
@@ -1,43 +1,118 @@
 * {
     margin: 0;
-    padding: 0;
+    adding: 0;
 }
 
-header {
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
+
+body {
+    background-color: black;
+    font-family: "Noto Sans KR", sans-serif;
+}
+
+#header {
     width: 100%;
-    height: 70px;
-    background-color: rgb(183, 183, 183);
+    height: 60px;
+    background-color: rgb(0, 0, 0);
+    transition: opacity 1s;
     display: flex;
     flex-direction: row;
-    
+    position: fixed;
     justify-content: space-between;
     align-items: center;
 }
 
-header>h1 {
-    color: rgb(0, 0, 0);
+#logo {
+    margin-left: 10%;
+    width: 160px;
 }
 
-#searchBox {
-    background-color: transparent;
-    height: 30px;
-    /*border: none;*/
+.search {
+    margin-right: 7%;
+    width: 300px;
+    position: relative;
+
+    #searchIcon {
+        width: 15px;
+        position: absolute;
+        top: 9px;
+        right: 275px;
+        fill: white;
+    }
+
+    #searchBox {
+        background-color: transparent;
+        border-radius: 20px;
+        width: 200px;
+        height: 30px;
+        text-indent: 30px;
+
+        color: white;
+
+        /*border: none;*/
+    }
+
+    #searchBox:hover {
+        cursor: pointer;
+    }
+
+    #searchBox:focus {
+        outline: none;
+        background-color: transparent;
+    }
+
+    #searchBtn {
+        border: none;
+        border-radius: 20px;
+        padding: 7px;
+        background-color: transparent;
+        color: white;
+    }
+
+    #searchBtn:hover {
+        cursor: pointer;
+        background-color: rgb(55, 55, 55);
+    }
 }
 
-#movie-cards {  /*카드가 생기는 부분*/
+#movie-cards {
+    /*카드가 생기는 부분*/
     display: grid;
     grid-template-columns: repeat(4, auto);
     grid-template-rows: repeat(5, auto);
+    grid-column-gap: 25px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     justify-content: center;
-    
 }
 
-.movie_card{ /*카드 하나하나*/
-    width: 200px;
-    border: 1px solid #ccc;
+.movie_card {
+    /*카드 하나하나*/
+    width: 230px;
+    border: 5px solid #ccc;
     padding: 20px;
     margin: 50px auto 0px auto;
     text-align: center;
-    background-color: rgb(132, 132, 132);
+    background-color: rgb(26, 26, 26);
+    color: white;
+
+    h3 {
+        font-weight: bold;
+        font-size: 20px;
+        padding-top: 10px;
+    }
+
+    #score {
+        padding-top: 10px;
+        font-size: 12px;
+    }
+
+    #content {
+        padding-top: 10px;
+        font-size: 11px;
+    }
 }
 
+.movie_card:hover {
+    cursor: pointer;
+}
