--- a/movie.css
+++ b/movie.css
@@ -1,118 +1,145 @@
 * {
-    margin: 0;
-    adding: 0;
+  margin: 0;
+  adding: 0;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
 
 body {
-    background-color: black;
-    font-family: "Noto Sans KR", sans-serif;
+  background-color: rgb(0, 0, 0);
+  font-family: "Noto Sans KR", sans-serif;
 }
 
 #header {
-    width: 100%;
-    height: 60px;
-    background-color: rgb(0, 0, 0);
-    transition: opacity 1s;
-    display: flex;
-    flex-direction: row;
-    position: fixed;
-    justify-content: space-between;
-    align-items: center;
+  width: 100%;
+  height: 60px;
+  background-color: rgb(0, 0, 0);
+  transition: opacity 1s;
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1;
 }
 
 #logo {
-    margin-left: 10%;
-    width: 160px;
+  margin-left: 10%;
+  width: 160px;
 }
 
 .search {
-    margin-right: 7%;
-    width: 300px;
-    position: relative;
+  margin-right: 7%;
+  width: 300px;
+  position: relative;
 
-    #searchIcon {
-        width: 15px;
-        position: absolute;
-        top: 9px;
-        right: 275px;
-        fill: white;
-    }
+  #searchIcon {
+    width: 15px;
+    position: absolute;
+    top: 9px;
+    right: 275px;
+    fill: white;
+  }
 
-    #searchBox {
-        background-color: transparent;
-        border-radius: 20px;
-        width: 200px;
-        height: 30px;
-        text-indent: 30px;
+  #searchBox {
+    background-color: transparent;
+    border-radius: 20px;
+    width: 200px;
+    height: 30px;
+    text-indent: 30px;
+    color: white;
 
-        color: white;
+    /*border: none;*/
+  }
 
-        /*border: none;*/
-    }
+  #searchBox:hover {
+    cursor: pointer;
+  }
 
-    #searchBox:hover {
-        cursor: pointer;
-    }
+  #searchBox:focus {
+    outline: none;
+    background-color: transparent;
+  }
 
-    #searchBox:focus {
-        outline: none;
-        background-color: transparent;
-    }
+  #searchBtn {
+    border: none;
+    border-radius: 20px;
+    padding: 7px;
+    background-color: transparent;
+    color: white;
+  }
 
-    #searchBtn {
-        border: none;
-        border-radius: 20px;
-        padding: 7px;
-        background-color: transparent;
-        color: white;
-    }
-
-    #searchBtn:hover {
-        cursor: pointer;
-        background-color: rgb(55, 55, 55);
-    }
+  #searchBtn:hover {
+    cursor: pointer;
+    background-color: rgb(55, 55, 55);
+  }
 }
 
 #movie-cards {
-    /*카드가 생기는 부분*/
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-template-rows: repeat(5, auto);
-    grid-column-gap: 25px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    justify-content: center;
+  /*카드가 생기는 부분*/
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-template-rows: repeat(5, auto);
+  grid-column-gap: 25px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  justify-content: center;
 }
 
 .movie_card {
-    /*카드 하나하나*/
-    width: 230px;
-    border: 5px solid #ccc;
-    padding: 20px;
-    margin: 50px auto 0px auto;
-    text-align: center;
-    background-color: rgb(26, 26, 26);
-    color: white;
+  /*카드 하나하나*/
+  width: 230px;
+  border: none;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 50px auto 0px auto;
+  display: flex;
+  justify-content: center;
+  background-color: rgb(26, 26, 26);
+  color: white;
 
-    h3 {
-        font-weight: bold;
-        font-size: 20px;
-        padding-top: 10px;
-    }
+  #poster {
+    border-radius: 10px;
+  }
 
-    #score {
-        padding-top: 10px;
-        font-size: 12px;
-    }
+  h3 {
+    font-weight: bold;
+    font-size: 20px;
+    padding-top: 10px;
+  }
 
-    #content {
-        padding-top: 10px;
-        font-size: 11px;
-    }
+  #score {
+    padding-top: 10px;
+    font-size: 12px;
+    color: rgb(255, 237, 43)
+  }
+
+  #content {
+    padding-top: 10px;
+    font-size: 10px;
+  }
+
+
 }
 
 .movie_card:hover {
-    cursor: pointer;
-}
+  cursor: pointer;
+  transform: translateY(-3%);
+  transition: 0.5s;
+
+  /* h3 {
+    color:rgb(181, 218, 255)
+  }*/
+} 
+
+
+
+/*
+    img{min-height: 100%; max-width: 100%; }
+    .imgHoverEvent{width: 200px; height: 200px; margin: 30px; position: relative; overflow: hidden; display: inline-block;}
+    .imgHoverEvent .imgBox{width: 200px; height: 200px; text-align: center; background:url(http://gahyun.wooga.kr/portfolio/triple/resources/img/city00.jpg) no-repeat 50% 50%; background-size: auto 100%;}
+    .imgHoverEvent .hoverBox{position: absolute; top:0; left: 0; width: 200px; height: 200px;}
+    .hoverBox p.p1{text-align:center; font-size:18px;}
+    .hoverBox p.p2{margin-top: 40px;}
+    .event1 .hoverBox{background: linear-gradient(to bottom, rgba(0,0,0,0) 5%,rgba(255,255,255,1) 90%); transform: translateY(60%); transition: 0.5s;}
+*/
