--- a/movie.css
+++ b/movie.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  adding: 0;
+  padding: 0;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
@@ -100,6 +100,7 @@ body {
 
   #poster {
     border-radius: 10px;
+    width: 230px;
   }
 
   h3 {
